build: add test for coffee factory to yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,12 @@ testmanager:
     - echo 'Testing manager'
     - mvn -Dtest=CoffeeManagerTester test
 
+testfactory:
+  stage: test
+  script:
+    - echo 'Testing factory'
+    - mvn -Dtest=CoffeeFactoryTester test
+
 build_prod:
   stage: build
   script: 
